{
    "name": "Controls",
    "maps": [
        {
            "name": "ActionMap",
            "id": "17e7d173-3b00-4d97-8f16-a818c813cfd7",
            "actions": [
                {
                    "name": "LeftGrab",
                    "type": "Button",
                    "id": "9d1b6523-0c47-4f29-a7b5-3afb2bd475eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftGrab1",
                    "type": "Button",
                    "id": "1e010d8d-ad4d-4650-9204-8ad1eafc0558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightGrab",
                    "type": "Button",
                    "id": "d37e5907-4a42-4e4d-b7e0-626408f4d529",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightGrab1",
                    "type": "Button",
                    "id": "37c9b074-153b-411f-9d52-1025aec97062",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftArm",
                    "type": "Value",
                    "id": "c49f4dae-dc5b-4a20-b5b7-9b3a53deb1e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftArm1",
                    "type": "Value",
                    "id": "797b8ac3-41a0-4068-be51-b25169cc759b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightArm",
                    "type": "Value",
                    "id": "9682efd7-e5bd-4c1f-8c7a-8887304d4f95",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightArm1",
                    "type": "Value",
                    "id": "3bcfb2a4-56f4-4858-b9aa-a01ce3a70de4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "900a5ea0-122b-42ab-acd2-1d2f1769d567",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d103362-9e47-416a-a197-69768143c304",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09175f32-aab5-436f-a7ec-2ca1c0a5fbd1",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db0f6d58-dfa8-418b-9652-3481b3c0c7e5",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "769001e9-6d9f-468e-a0b9-2b147618e869",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftGrab1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a60e8e9-1f7f-4b93-95dd-386853dd0107",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightGrab1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44c5f448-5b3c-4a43-8cd5-5afb8a07f8fc",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftArm1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f32b6261-9591-4147-a755-843a5addb16a",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightArm1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}